--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
     "@nuxtjs/auth": "^4.9.1",
     "@nuxtjs/axios": "^5.3.6",
     "@nuxtjs/pwa": "^3.0.0-0",
+    "dom-to-image": "^2.6.0",
+    "jspdf": "^1.5.3",
     "nuxt": "^2.0.0",
     "quagga": "^0.12.1"
   },
